# aesir

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py
app/api/: admin.py  webhook.py
app/database/: mongodb.py
app/models/: webhook.py
app/services/: instagram.py  webhook_queue.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/utils/: rate_limiter.py  security.py  telemetry.py
tests/: test_webhook.py
