[project]
name = "mentorai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "opentelemetry-api>=1.18.0",
    "opentelemetry-exporter-otlp>=1.18.0",
    "opentelemetry-instrumentation-fastapi>=0.39b0",
    "opentelemetry-instrumentation-httpx>=0.39b0",
    "opentelemetry-sdk>=1.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.9.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.22.0",
]
